@startuml class diagram

class VluchtController {
    - VluchtService vluchtService
    + List<Vlucht> zoekVluchten(String vertrek, String bestemming, Date datum)
    + List<Vlucht> haalVluchtenOp(String username)
    + void boekVlucht(Vlucht vlucht)
}

class VluchtService {
    - VluchtRepository vluchtRepository
    - List<IExternVluchtAdapter> adapters
    - ExternVluchtAdapterFactory adapterFactory
    + List<Vlucht> zoekVluchten(String vertrek, String bestemming, Date datum)
    + void boekVlucht(Vlucht vlucht, String api)
    + List<Vlucht> haalVluchtenOp(String username)
}

interface IExternVluchtAdapter {
    + List<Vlucht> zoekVluchten(String vertrek, String bestemming, Date datum);
    + void boekVlucht(Vlucht vlucht);
}

class KLMAdapter implements IExternVluchtAdapter {
    + List<Vlucht> zoekVluchten(String vertrek, String bestemming, Date datum)
    + void boekVlucht(Vlucht vlucht)
}

class SkyscannerAdapter implements IExternVluchtAdapter {
    + List<Vlucht> zoekVluchten(String vertrek, String bestemming, Date datum)
    + void boekVlucht(Vlucht vlucht)
}

class VluchtRepository {
    + void slaVluchtOp(Vlucht vlucht, String username)
    + List<Vlucht> haalVluchtenOp(String username)
}


class ExternVluchtAdapterFactory {
    - Map<String, IExternVluchtAdapter> adapterMap
    + IExternVluchtAdapter getAdapter(String api)
}

class Vlucht {
    - api : String
    - vluchtNummer: String
    - maatschappij: String
    - vertrekLocatie: String
    - bestemming: String
    - prijs: double
    - vertrekDatumTijd: LocalDateTime
    - aankomstDatumTijd: LocalDateTime
}

VluchtController --> VluchtService : 1..1
VluchtService --> VluchtRepository : 1..1
ExternVluchtAdapterFactory --> IExternVluchtAdapter : 1..*
VluchtService --> IExternVluchtAdapter : 1..*
VluchtService --> ExternVluchtAdapterFactory : 1..1

'VluchtService --> Vlucht : 1..*
'VluchtController --> Vlucht : 1..*
'VluchtRepository --> Vlucht : 1..*
'IExternVluchtAdapter --> Vlucht : 1..*

@enduml